--- a/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
+++ b/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
@@ -36,7 +36,7 @@ faculty_research_areas = Domaines de recherche facultaires
 affiliated_research_areas = Domaines de recherche associés
 affiliated_departments = Départements associés
 organization = personnes de l'organisation ayant cet intérêt de recherche
-share_the_uri = partager l URI
+share_the_uri = partager cette URI
 
 export_qr_codes = Exporter les codes QR
 vcard_qr = QR de vCard
@@ -147,26 +147,26 @@ hyperlink = Hyperlien
 #
 # harvester templates ( /templates/freemarker/body/harvester )
 #
-must_be_admin = Vous devez être un administrateur pour utiliser cet outil.
+must_be_admin = Vous devez être administrateur(-trice) pour utiliser cet outil.
 error_no_job_specified = Erreur: aucun traitement de chargement spécifié, ou un traitement inconnu a été spécifié.
-probably_a_bug_so_report = L'utilisateur ne devrait pas voir cette erreur normalement. Il s'agit vraisemblablement d'un problème qui doit être rapporté.
+probably_a_bug_so_report = L'utilisateur ne devrait pas normalement voir cette erreur. Il s'agit vraisemblablement d'un problème qui doit être rapporté.
 return_to_ingest_menu = Revenir au menu des outils de moissonnage de données
 ingest_menu = Menu de moissonnage
 data_being_harvested = Veuillez attendre. Données en cours de chargement.
 harvest_complete = Moissonnage complété. Pour un nouveau jeu de métadonnées, veuillez recharger la page.
 error_harvest_cannot_continue = Une erreur est survenue et le processus de moissonnage doit s'arrêter.
-harvest_error_instructions_one = Ceci est généralement du à une configuration erronnée du moissonnage. Veuiles vous assurer que:
+harvest_error_instructions_one = Ceci est généralement dû à une configuration erronnée du moissonnage. Veuillez vous assurer que:
 harvest_error_instructions_two = l'outil de moissonnage (harvester) de VIVO est installé.
 the_capitalized = Le
 harvester_location = harvester.location
-harvest_error_instructions_three = property dans runtime.properties pointe sur le répertoire d'instalation de l'outil de moissonnage (harvester).
-harvest_error_instructions_fourA = Dans l'outil de moissonnage de VIVO (harvester) l'usager du serveur web (typiquement tomcat6) a les droits en lecture/écriture sur le répertoire
+harvest_error_instructions_three = property dans runtime.properties pointe sur le répertoire d'installation de l'outil de moissonnage (harvester).
+harvest_error_instructions_fourA = Dans l'outil de moissonnage de VIVO (harvester) l'usager du serveur web (typiquement Tomcat) a les droits en lecture/écriture sur le répertoire
 harvest_error_instructions_fourB = vivo/
 harvest_error_instructions_fourC = et tous ses enfants.
 harvest_error_instructions_fiveA = Dans l'outil de moissonnage VIVO (Harvester), le répertoire
 harvest_error_instructions_fiveB = logs/
 harvest_error_instructions_fiveC = existe et l'usager du serveur web en a les droits de lecture et d'écriture.
-harvest_error_instructions_sixA = dans l'outil de moissonnage (harvester) de ViVO, le fichier
+harvest_error_instructions_sixA = dans l'outil de moissonnage (harvester) de VIVO, le fichier
 harvest_error_instructions_sixB = vivo/config/vivo.xml
 harvest_error_instructions_sixC = est correctement configuré selon le nom de votre base de données et son nom de domaine.
 step_one = Étape 1
@@ -277,7 +277,7 @@ presentation_capitalized = Présentation
 presentation_type = Type de présentation
 role_in = Rôle dans
 presentation_hint = ex.: modérateur, conférencier, panéliste
-presented_at = Presenté à
+presented_at = Présenté à
 selected_conference = Conférence choisie
 
 select_existing_pub_or_enter_new = Choisir une publication existante ou en saisir une nouvelle dans le champ Titre.
@@ -342,7 +342,7 @@ create_new_class = Créer une nouvelle classe
 create_new_one = Créer une nouvelle
 use_capitals_each_word = mettre la première lettre de chaque mot en majuscule
 local_namespace = Espace de nom local
-problematic_section_error = Erreur: les sections problématiques telle que ci-dessus devraient toutes avoir été traitées.
+problematic_section_error = Erreur: les sections problématiques telles que ci-dessus devraient toutes avoir été traitées.
 new_local_ontology = nouvelle ontologie locale
 
 manage_grants_and_projects = Gérer les subventions et les projets pour
@@ -514,7 +514,7 @@ link = lien
 #
 parent_entity = entité parente
 map_of_science_icon = icône de la carte des sciences
-explore_activity = Explore les activités
+explore_activity = Explorer les activités
 explore_capitalized = Explorer
 across_subdisciplines = à travers 554 sous-disciplines scientifiques
 compare_organizations = Comparer les organisations
@@ -587,14 +587,14 @@ vis_tools_note_four = Les modèles sont actualisés chaque fois que le serveur r
 #  custom form javascript variables ( /templates/freemarker/edit/js)
 #
 drag_drop_reorder_authors = Glisser-déposer pour réorganiser les auteur(e)s
-reordering_authors_failed = Le réordonnancement des auteur(e)s a échoué
+reordering_authors_failed = Il a été impossible de réordonner les auteur(e)s
 confirm_author_removal = Êtes-vous certain de vouloir retirer cet auteur(e): 
 error_processing_author_request = Erreur lors du traitement de la demande: l'auteur(e) n'a pas été retiré(e)
 author_capitalized = Auteur(e)
 or_add_new_one = ou en ajouter un nouveau.
 
 vocabulary_service_unavailable = Une erreur est survenue à l exécution de cette recherche.
-no_serch_results_found = La recherche n a produit aucun résultat.
+no_serch_results_found = Aucun résultat pour cette recherche.
 label_type = Étiquette (type d )
 label_altLabels = Étiquette (étiquettes alternatives)
 definition_capitalized = Définition
@@ -602,7 +602,7 @@ best_match = Meilleure correspondance
 select_term_from_results = Veuillez sélectionner au moins un terme dans les résultats de recherche.
 select_vocabulary_source_to_search = Veuillez sélectionner au moins une source de vocabulaire externe à rechercher.
 confirm_term_deletion = Êtes-vous certain de vouloir retirer ce terme?
-error_term_not_deleted = Erreur lors du traitement de la demande: le terme n a pas été retiré
+error_term_not_deleted = Erreur lors du traitement de la demande: le terme ne peut être retiré
 
 advising = conseil
 advising_relationship = relation de conseil
@@ -619,7 +619,7 @@ publication_successfully_excluded = La publication a été retirée avec succès
 error_excluding_publication = Erreur lors du traitement de la demande: la publication ne peut être retirée de la page de profil.
 
 drag_drop_to_reorder_webpages = Glisser et déplacer pour réorganiser les pages web
-webpage_reordering_failed = Le réordonnancement des pages web a échoué.
+webpage_reordering_failed = Il a été impossible de réordonner les pages web.
 confirm_webpage_deletion = Êtes-vous certain de vouloir retirer cette page web?
 error_removing_webpage = Erreur lors du traitement de la demande: la page web ne peut être retirée.
 
@@ -706,7 +706,7 @@ percent_activity = % d'activité
 #
 
 standardview_tooltip_one = Cliquer pour afficher
-standardview_tooltip_two = l aperçu rapide du profil.
+standardview_tooltip_two = un aperçu rapide du profil.
 research_area_tooltip_one = Cliquer sur un terme pour afficher
 research_area_tooltip_two = d autres personnes partageant le même intérêt.
 quickview_tooltip = Cliquer pour afficher la page de profil complète.
@@ -732,12 +732,12 @@ document_name_capitalized = Nom du document
 selected_document = Document choisi
 editor_name = nom de l'éditeur(-trice)
 missing_editor = éditeur manquant
-drag_drop_reorder_editors = Glisser et déplacer pour réordonnancer les éditeur(-trice)s
-reordering_editors_failed = Le réordonnancement des éditeur(-trice)s a échoué.
+drag_drop_reorder_editors = Glisser et déplacer pour réordonner les éditeur(-trice)s
+reordering_editors_failed = Il a été impossible de réordonner les éditeur(-trice)s.
 confirm_editor_removal = Êtes-vous certain de vouloir retirer cet(te) éditeur(-trice):
 error_processing_editor_request = Erreur lors du traitement de la demande: L'éditeur(-trice) n'a pas été retiré(e)
 manage_editors = Gérer les éditeur(-trice)s
-no_linked_editor = aucun(e) éditeur(-trice) lié
+no_linked_editor = aucun(e) éditeur(-trice) lié(e)
 remove_editor_link = retirer le lien éditeur(-trice)
 add_an_editor = Ajouter un(e) éditeur(-trice)
 add_editor = Ajouter Éditeur(-trice)
@@ -757,7 +757,7 @@ year_issued = Année d'émission
 year_awarded_for = année récompensée
 create_year_awarded = Créer l'année récompensée
 edit_year_awarded = Éditer l'année récompensée
-publication_date_for = date de puiblication pour
+publication_date_for = date de publication pour
 create_publication_date = Créer la date de publication
 edit_publication_date = Éditer la date de publication
 name_prefix = Préfixe
@@ -782,7 +782,7 @@ edit_entry_for_head_role=: Éditer ce rôle "Responsable de"
 edit_entry_for_member_role=: Éditer cette affiliation
 edit_entry_for_clinical_role=: Éditer cette activité clinique
 edit_entry_for_attendee_role=: Éditer cette participation
-edit_entry_for_organizer_role=: Éditer ce rôle d'organisateur
+edit_entry_for_organizer_role=: Éditer ce rôle d'organisateur(trice)
 edit_entry_for_editor_role=: Éditer ce rôle d'éditeur(-trice)
 edit_entry_for_service_provider_role=: Éditer ce rôle de fournisseur(-euse) de services
 edit_entry_for_outreach_provider_role=: Éditer ce rôle de vulgarisateur(-trice)
