Fixed typos and normalized gender related expressions

--- a/fr_CA/webapp/src/main/webapp/themes/tenderfoot/i18n/all_fr_CA.properties
+++ b/fr_CA/webapp/src/main/webapp/themes/tenderfoot/i18n/all_fr_CA.properties
@@ -23,7 +23,7 @@ menu_item = élément de menu
 address_street_three = 3e ligne d'adresse
 vivo_profile = profil VIVO
 identity_myprofile = Mon profil
-unable_to_handle_grant_editing = Impossible d'éditer cette subvention depuis le formulaire. La subvention est associée à plusieurs chercheurs.
+unable_to_handle_grant_editing = Impossible d'éditer cette subvention depuis le formulaire. La subvention est associée à plusieurs chercheur(-euse)s.
 unable_to_handle_position_editing = Impossible d'éditer ce poste depuis le formulaire. Le poste est associé à plusieurs individus.
 address_label = étiquette d'adresse
 no_grants_for = Actuellement aucune subvention pour 
@@ -42,7 +42,7 @@ place_of_grant = Lieu de la subvention
 menu_logout = Déconnexion
 identity_edit = Éditer la page
 menu_loginfull = Connectez-vous pour gérer ce site
-reviewer_role = Rôle de réviseur
+reviewer_role = Rôle de réviseur(e)
 menu_login = Connexion
 view_all_departments = voir tous les départements
 identity_admin = Administration du site
@@ -58,17 +58,17 @@ create_entry = Créer un enregistrement
 first_grant = Première subvention
 map_states_string = provinces.
 limit_search = Filtrer la recherche
-identity_user = utilisateur
+identity_user = utilisateur(trice)
 menu_about = À propos
 grant_entry_for = subvention pour
-regions = regions
+regions = régions
 faculty_who_are_members_of_org = Voici les personnes des {0} départements qui font partie de cette organisation.
 placeholder_image = emplacement de l'image
 indiv_foafperson_return = retourner à
 enter_new_role_value = Saisir une nouvelle valeur dans le champs Rôle.
 last_name = Nom de famille
 countries_and_regions = pays et régions.
-currently_no_researchers = Aucun chercheur ayant une facette géographique.
+currently_no_researchers = Aucun chercheur(-euse) ayant une facette géographique.
 research_area = personnes du département associées à ce domaine
 identity_myaccount = Mon compte
 province_or_region = Province ou région
@@ -85,12 +85,12 @@ display_more = plus
 intro_para2 = Consulter ou chercher de l'information sur les personnes, départements, cours, subventions et publications.
 intro_para1 = VIVO est une plateforme de valorisation de la recherche facilitant la collaboration entre chercheurs de toutes les disciplines.
 profile_capitalized = Profil
-organizer_role = Rôle d'organisateur
+organizer_role = Rôle d'organisateur(-trice)
 faculty_memberships = Membres facultaires
 edit_mailing_address = Éditer le courriel
 add_capitalized = Ajouter
 attendee_capitalized = Participant
-researchers_in = chercheurs en
+researchers_in = chercheur(-euse)s en
 menu_powered = Propulsé
 view_all_members_of_org = Voir tous les membres de cette organisation.
 
