--- a/fr_CA/webapp/src/main/webapp/themes/wilma/i18n/all_fr_CA.properties
+++ b/fr_CA/webapp/src/main/webapp/themes/wilma/i18n/all_fr_CA.properties
@@ -11,18 +11,18 @@ menu_termuse = Conditions d'utilisation
 menu_powered = Propulsé par
 
 intro_title = Bienvenue dans VIVO
-intro_para1 = VIVO est une plateforme de valorisation de la recherche facilitant la collaboration entre chercheurs de toutes les disciplines.
+intro_para1 = VIVO est une plateforme de valorisation de la recherche facilitant la collaboration entre chercheur(-euses)s de toutes les disciplines.
 intro_para2 = Parcourez ou recherchez des informations sur des personnes, des départements, des cours, des subventions et des publications.
 intro_searchvivo = Recherche VIVO
 intro_filtersearch = Limiter la recherche
 
 identity_title = VIVO | Connecter, partager, découvrir
 identity_index = Index
-identity_edit = Editer la page
+identity_edit = Éditer la page
 identity_admin = Administration du site
 identity_myprofile = Mon profil
 identity_myaccount = Mon compte
-identity_user = utilisateur
+identity_user = utilisateur(-trice)
 
 collection_capitalized = Collection
 collection_or_series = la collection ou la série
@@ -53,14 +53,14 @@ address_label = étiquette d'adresse
 loading_website_image = Chargement du site
 
 researchers_in = chercheurs en
-view = vuw
+view = vue
 grant_type = type de subvention
 grant_entry_for = subvention pour
 regions = régions
 grant_date = Date de la subvention
 map_states_string = provinces.
 map_state_string = province.
-unable_to_handle_grant_editing = Impossible d'éditer cette subvention depuis le formulaire: la subvention est associée à plusieurs chercheurs.
+unable_to_handle_grant_editing = Impossible d'éditer cette subvention depuis le formulaire: la subvention est associée à plusieurs chercheur(-euse)s.
 unable_to_handle_position_editing = Impossible d'éditer ce poste depuis le formulaire: le poste est associé à plusieurs personnes.
 currently_no_papers_for = Aucun article {0} pour
 change_selection = changer votre sélection
@@ -69,7 +69,7 @@ first_name = Prénom
 last_name = Nom de famille
 first_grant = Première subvention
 last_grant = Dernière subvention
-currently_no_researchers = Aucun chercheur trouvé ayant une facette géographique.
+currently_no_researchers = Aucun chercheur(-euse) trouvé(e) ayant une facette géographique.
 reviewer_role = Rôle de réviseur
 vivo_profile = profil VIVO
 loading_data = chargement des données
@@ -94,7 +94,7 @@ placeholder_image = emplacement de l'image
 view_all_members_of_org = Voir tous les membres de cette organisation.
 display_more = plus
 create_entry = Créer un enregistrement
-attendee_capitalized = Participants
+attendee_capitalized = Participant(e)s
 no_faculty_found = Aucun membre de la faculté trouvé.
 create_capitalized = Créer
 to = à
@@ -102,11 +102,11 @@ enter_new_role_value = Saisir une nouvelle valeur dans le champ Rôle.
 countries_and_regions = pays et régions.
 province_or_region = Province ou région
 full_name = Nom complet
-researchers = chercheurs
+researchers = chercheur(-euse)s
 years_participation_in = Années de participation dans
 return_to_grant = Revenir à la subvention
 profile_capitalized = Profil
-organizer_role = Rôle d'organisateur
+organizer_role = Rôle d'organisateur(-trice)
 faculty_memberships = Membres facultaires
 edit_mailing_address = Éditer le courriel
 add_capitalized = Ajouter
