[VIVO-1846] i18n: Added i18n support for Capability Map control buttons (#58)
* Added i18n support for Capability Map control buttons, JIRA ticket VIVO-1846

* fixed wrong translation for resume

Partial resolution for: https://jira.lyrasis.org/browse/VIVO-1846

--- a/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
+++ b/de_DE/webapp/src/main/webapp/i18n/vivo_all_de_DE.properties
@@ -582,6 +582,14 @@ vis_tools_note_three = Zurzeit speichern wir diese Modelle im Hauptspeicherberei
 vis_tools_note_four = Die Modelle werden bei jedem Neustart des Servers aktualisiert. Da dies auf der Produktionsinstanz  allgemein unpraktisch ist, können AdministratorInnen stattdessen den “Zwischenspeicher aktualisieren”-Link oben verwenden, um ohne einen Neustart eine Aktualisierung durchzuführen.
 capability_map=Forschungsnetz
 term_capitalized=Begriff
+pause=pausieren
+resume=wiederaufnehmen
+show_group_labels=Gruppenbeschriftungen einblenden
+hide_group_labels=Gruppenbeschriftungen ausblenden
+delete_selected=ausgewählte löschen
+remove_capability=Entferne Begriff
+remove_group=Entferne Gruppe
+expand=erweitern
 
 #
 #  custom form javascript variables ( /templates/freemarker/edit/js)
