--- a/en_CA/webapp/src/main/webapp/i18n/vivo_all_en_CA.properties
+++ b/en_CA/webapp/src/main/webapp/i18n/vivo_all_en_CA.properties
@@ -582,6 +582,14 @@ vis_tools_note_three = We're currently caching these models in memory.  The cach
 vis_tools_note_four = The models are refreshed each time the server restarts.  Since this is not generally practical on production instances, administrators can instead use the "refresh cache" link above to do this without a restart.
 capability_map=Capability Map
 term_capitalized=Term
+pause=pause
+resume=resume
+show_group_labels=show group labels
+hide_group_labels=hide group labels
+delete_selected=Delete selected
+remove_capability=Remove capability
+remove_group=Remove group
+expand=Expand
 
 #
 #  custom form javascript variables ( /templates/freemarker/edit/js)
