--- a/es/webapp/src/main/webapp/i18n/vivo_all_es.properties
+++ b/es/webapp/src/main/webapp/i18n/vivo_all_es.properties
@@ -594,6 +594,14 @@ vis_tools_note_three = Actualmente el cache de estos modelos estan en la memoria
 vis_tools_note_four = Los modelos se actualizan cada vez que se reinicia el servidor. Dado que esto no es generalmente práctico sobre instancias de producción, los administradores pueden usar el enlace "actualización de caché" para hacer esto sin reiniciar.
 capability_map=Mapa de capacidades
 term_capitalized=Término
+pause=pausa
+resume=continuar
+show_group_labels=mostrar las etiquetas de los grupos
+hide_group_labels=ocultar las etiquetas de los grupos
+delete_selected=Borrar seleccionado
+remove_capability=Eliminar capacidad
+remove_group=Quitar el grupo
+expand=Expande
 
 #
 #  variables de javascript en formularios personalizados ( /templates/freemarker/edit/js)
