--- a/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
+++ b/fr_CA/webapp/src/main/webapp/i18n/vivo_all_fr_CA.properties
@@ -584,6 +584,14 @@ vis_tools_note_three = Nous sommes en train de mettre ces modèles en mémoire c
 vis_tools_note_four = Les modèles sont actualisés chaque fois que le serveur redémarre. Comme ce n'est généralement pas pratique sur les instances de production, les administrateurs peuvent utiliser le lien "rafraîchir le cache" ci-dessus pour le faire sans redémarrer.
 capability_map=Cartographie d'expertises
 term_capitalized=Terme
+pause=Figer
+resume=Animer
+show_group_labels=Afficher les noms
+hide_group_labels=Masquer les noms
+delete_selected=Retirer du graphe
+remove_capability=Retirer du graphe
+remove_group=Retirer du graphe
+expand=Étendre
 
 #
 #  custom form javascript variables ( /templates/freemarker/edit/js)
