--- a/pt_BR/webapp/src/main/webapp/i18n/vivo_all_pt_BR.properties
+++ b/pt_BR/webapp/src/main/webapp/i18n/vivo_all_pt_BR.properties
@@ -592,6 +592,14 @@ vis_tools_note_three = No momento, estamos cache esses modelos na memória. O ca
 vis_tools_note_four = Os modelos são atualizadas a cada vez que o servidor for reiniciado. Uma vez que este não é geralmente prático sobre instâncias de produção, os administradores podem passar a usar o link "cache refresh" acima de fazer isso sem uma reinicialização.
 capability_map=Mapa de Capacidade
 term_capitalized=Termo
+pause=pausa
+resume=etomar
+show_group_labels=mostrar etiquetas de grupo
+hide_group_labels=etiquetas de grupos de ocultação
+delete_selected=Eliminar selecionado
+remove_capability=Remova capacidade
+remove_group=Remover grupo
+expand=Expandir
 
 #
 #  custom form javascript variables ( /templates/freemarker/edit/js)
